--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ th,td{white-space:nowrap}
 </head>
 <body>
 
-<header>Otpremnice PRO</header>
+<header>Otpremnice PRO ver.03</header>
 
 <main class="container">
 
